# splitwise

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  run.py
classes/: __init__.py
miscellaneous/: __init__.py
